testdata/err/string_literal_bad_unicode.err.txt
error: unexpected token
- testdata/err/string_literal_bad_unicode.tn:1:16
1 | main = || -> { "foo \u{ffffffff} bar \u{ffffffff} baz" };
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: valid tokens at this point: ["}", IdentifierName]
